Optimize + level 1 with conditional rendering

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 id="title">Movie List</h1>
-  <div id="app"></div>
+  <div id="app">If you see this your react is GG</div>
   <script src="bundle.js"></script>
 </body>
 </html>
